--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-	"start": "node ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-	"express": "~4.13.1",
-	"jade": "~1.11.0",
-	"rfr": "~1.2.2"
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "kerberos": "0.0.17",
+    "mongodb": "^2.0.49",
+    "mongoose": "^4.2.7",
+    "rfr": "~1.2.2"
   },
   "devDependencies": {
-	"fs": "0.0.2",
-	"gulp": "^3.9.0",
-	"gulp-ssh": "^0.5.3",
-	"gulp-util": "^3.0.7"
+    "fs": "0.0.2",
+    "gulp": "^3.9.0",
+    "gulp-ssh": "^0.5.3",
+    "gulp-util": "^3.0.7"
   }
 }
