--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,34 @@
-# Created by https://www.gitignore.io/api/node,linux
+# Created by https://www.gitignore.io/api/intellij,node,linux,windows
+
+### Intellij ###
+
+*.iml
+
+## Directory-based project format:
+
+.idea/
+
+## File-based project format:
+
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
 
 ### Node ###
 
@@ -31,6 +61,12 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
 ### Linux ###
 
 *~
@@ -41,29 +77,23 @@ node_modules
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
 
-### Intellij ###
+### Windows ###
 
-*.iml
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
-## Directory-based project format:
-.idea/
+# Folder config file
+Desktop.ini
 
-## File-based project format:
-*.ipr
-*.iws
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-## Plugin-specific files:
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
 
-# IntelliJ
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
+# Windows shortcuts
+*.lnk
