--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.5.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "kerberos": "0.0.17",
