--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^1.5.0",
+    "coffee-script": "^1.10.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "kerberos": "0.0.17",
