--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "kerberos": "0.0.17",
     "mongodb": "^2.0.49",
     "mongoose": "^4.2.7",
+    "node-sass-middleware": "^0.9.7",
     "rfr": "~1.2.2"
   },
   "devDependencies": {
