--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "kerberos": "0.0.17",
+    "moment": "^2.10.6",
     "mongodb": "^2.0.49",
     "mongoose": "^4.2.7",
     "node-sass-middleware": "^0.9.7",
