--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "body-parser": "^1.14.1",
+    "coffee-middleware": "^0.3.0",
     "coffee-script": "^1.10.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
