Implement flash messages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "body-parser": "^1.14.1",
     "coffee-middleware": "^0.3.0",
     "coffee-script": "^1.10.0",
+    "cookie-parser": "^1.4.0",
     "express": "~4.13.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "kerberos": "0.0.17",
     "moment": "^2.10.6",
