--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mongodb": "^2.2.11",
     "mongoose": "^4.7.0",
     "node-sass-middleware": "^0.10.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-alpha7",
     "rfr": "^1.2.3"
   }
