--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.17.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.7.0",
+    "mysql": "^2.12.0",
     "node-sass-middleware": "^0.10.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
