--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "express-flash": "0.0.2",
     "express-session": "^1.14.2",
+    "guid": "0.0.12",
     "kerberos": "0.0.22",
     "moment": "^2.17.0",
     "mongodb": "^2.2.11",
